[gd_scene load_steps=4 format=2]

[ext_resource path="res://Target.gd" type="Script" id=1]
[ext_resource path="res://art/cross.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[node name="Target" type="Area2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CollisionRay" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 16 )

[node name="Visibility" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visibility"]
[connection signal="area_entered" from="Visibility" to="." method="_on_Visibility_area_entered"]
[connection signal="area_exited" from="Visibility" to="." method="_on_Visibility_area_exited"]
